syntax = "proto3";
package pb;
option go_package = "gim/pkg/pb/";

import "connect.ext.proto";

service ConnectInt {
  //  消息投递
  rpc DeliverMessage (DeliverMessageReq) returns (DeliverMessageResp);
}

message DeliverMessageReq {
  int64 device_id = 1; // 设备id
  MessageSend message_send = 2; // 数据
}
message DeliverMessageResp {
}

// 房间推送
message PushRoomMsg{
  int64 room_id = 1; // 设备id
  MessageSend message_send = 2; // 数据
}

// 房间推送
message PushAllMsg{
  MessageSend message_send = 2; // 数据
}

